tests/errors/record-missing-comma/main.pa
# Record fields are separated with commas.
def main = { a: 1 b: 2 }
